add paper review & contact foam

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 					<i class="fab fa-linkedin", style = "font-size:53px"></i>
 				</a>
 				<br>
-				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">Feel free to reach me!</p>
+				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">Feel free to reach out!</p>
 				<br>
 			</div>
 
