--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,7 @@
 	  	</nav>
 
 		<div class="container" align="center">
-			<h1 class="my-4">Jiwon Jeong
-			</h1>
+			<h1 class="my-4">Jiwon Jeong</h1>
 			<div align="center">
 				<!-- <p class="lead text-center">Feel free to reach me</p> -->
 				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
@@ -82,14 +81,17 @@
 
 				<br>
 				<br>
-				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">
-						Hi, I'm Jiwon.
+				<p class="lead text-center" style="font-size:25px">
+					Hi, I'm Jiwon.
 					</p>
 				<p class="lead text-center" style="font-size:25px">
-						I'm a graduate student researching Data Science at Yonsei University.
+					I'm a graduate student majoring in Industrial Engineering at Yonsei University.
 					</p>
 				<p class="lead text-center" style="font-size:25px">
-						Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
+					I love to play around with data and solve problems with machine learning.   
+					</p>
+				<p class="lead text-center" style="font-size:25px">
+					Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
 					</p>
 				<!-- <p class="lead text-center" style="font-size:25px">
 						I love traveling🌎, books📚, music🎧, art gallery🎨, and regular gym workout💪
@@ -103,20 +105,41 @@
 				<!-- <center>
 					<img src="images/prague.jpg" alt="prague" style="margin-bottom:5cm">
 				</center> -->
-
-				<br>
-				<br>
 			</div>
 		</div>
 
-		<div class="fixed-bottom">
-			<div class="footer-bottom">
+		<div class="contact-foam" align = 'center', style="margin-top:150px">
+		  <form  action="https://formspree.io/jiwon.j306@gmail.com" method="POST">
+		  <!-- <form action="action_page.php"> -->
+			  <h1 class = 'my-4'>Contact Me</h1>
+			  <div class = 'txtb'>
+				  <label for="fname">Frist Name :</label>
+				  <input type="text" id="fname" name="firstname" placeholder="Enter Your First Name.." required></input>
+			  </div>
+			  <div class = 'txtb'>
+				  <label for="fname">Last Name :</label>
+				  <input type="text" id="lname" name="lastname" placeholder="Enter Your Last Name.." required></input>
+			  </div>
+			  <div class = 'txtb'>
+				  <label for="email">Email :</label>
+				  <input type="text" id="email" name="email" placeholder="Enter Your Email.." required></input>
+			  </div>
+			  <div class = 'txtb'>
+				  <label for="message">Message :</label>
+				  <textarea type="text" id="message" name="message" placeholder="Enter Your Message.." required></textarea>
+			  </div>
+			  <div>
+				  <a class='btn' type="submit" value="Submit">Send</a>
+			  </div>
+		  </form>
+		</div>
+
+			<div class="footer-bottom" style="margin-top: 150px">
 				<p class="m-0 text-center text-white" style="font-size:18px">
 	 			<a> Template by </a>
 	 			<a target="_blank" href="https://gsurma.github.io/">
 	 				Greg Surma
 	 			</a>
 			</div>
-		</div>
 	</body>
 </html>
