--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
 			<div class="projectFilter">
 				<center>
-					<a href="#" filter="*" class="current">All</a>
-					<a href="#" filter=".ml">ML</a>
-					<a href="#" filter=".dl">DL</a>
-					<a href="#" filter=".cv">CV</a>
-					<a href="#" filter=".nlp">NLP</a>
-					<a href="#" filter=".blog">Blog</a>
+					<a href="#" filter="*" class="current" style="font-size:27px">All</a>
+					<a href="#" filter=".ml" style="font-size:27px">ML</a>
+					<a href="#" filter=".dl" style="font-size:27px">DL</a>
+					<a href="#" filter=".cv" style="font-size:27px">CV</a>
+					<a href="#" filter=".nlp" style="font-size:27px">NLP</a>
+					<a href="#" filter=".blog" style="font-size:27px">Blog</a>
 				</center>
 			</div>
 
@@ -108,6 +108,38 @@
 			<div class="row"><div class="projectContainer"></div></div>
 
 			<div class="projectContainer row">
+
+				<div class="cv dl blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/dive.gif" alt="dive">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">Deep Dive into CNN World</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">with code</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Paper Reviews</li>
+									<li>Computer Vision</li>
+									<li>Tensorflow</li>
+									<li>Date : Jul 2019</li>
+							</ul>
+							<div class="link_button">
+								<a class='icon' target="_blank" href="https://github.com/jjone36/dl_scratch">
+									<i class="fab fa-github", style = "font-size:35px"></i>
+								</a>
+								<a class='icon' target="_blank" href="https://towardsdatascience.com/deep-dive-into-the-computer-vision-world-f35cd7349e16?source=friends_link&sk=449ea5da20c884dadca23b907efb7e13">
+									<i class="fab fa-medium", style = "font-size:35px"></i>
+								</a>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
@@ -126,7 +158,7 @@
 									<li>Blog Post</li>
 									<li>Date : Jun 2019</li>
 							</ul>
-							<div class="link_button", style="color:">
+							<div class="link_button">
 								<a class='icon' target="_blank" href="https://towardsdatascience.com/hackathon-get-ready-with-me-3192c7690cb7">
 									<i class="fab fa-medium", style = "font-size:35px"></i>
 								</a>
@@ -286,7 +318,7 @@
 								<p class="card-text">with the least amount of maths</p>
 							</center>
 							<ul style="list-style-type:square; text-align:left;">
-									<li>Medium</li>
+									<li>Series</li>
 									<li>ANN, CNN and RNN</li>
 									<li>Date : Jan 2019</li>
 							</ul>
@@ -499,6 +531,7 @@
 										<p class="card-text">and how to use Youtube API</p>
 									</center>
 									<br>
+									<br>
 									<ul style="list-style-type:square; text-align:left;">
 											<li>Medium</li>
 											<li>Date : Nov 2018</li>
@@ -633,7 +666,7 @@
 							</div>
 						</div>
 
-						<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<!-- <div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
 									<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
 								</a>
@@ -659,15 +692,10 @@
 										<a class='icon' target="_blank" href="https://github.com/jjone36/Coursera_deeplearning_ai">
 											<i class="fab fa-github", style="font-size:35px"></i>
 										</a>
-										<!-- <a href="https://github.com/jjone36/Coursera_deeplearning_ai">
-											<center>
-												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
-											</center>
-										</a> -->
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<!-- <div class=" col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
