--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 					I'm a graduate student majoring in Industrial Engineering at Yonsei University.
 					</p>
 				<p class="lead text-center" style="font-size:25px">
-					I love to play around with data and solve problems with machine learning.   
+					I love to play around with data and solve problems with machine learning.
 					</p>
 				<p class="lead text-center" style="font-size:25px">
 					Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
@@ -109,7 +109,7 @@
 		</div>
 
 		<div class="contact-foam" align = 'center', style="margin-top:150px">
-		  <form  action="https://formspree.io/jiwon.j306@gmail.com" method="POST">
+		  <form  action="https://getform.io/f/8bb701eb-0fde-4d24-a1b9-1e5e9e29f127" method="POST">
 		  <!-- <form action="action_page.php"> -->
 			  <h1 class = 'my-4'>Contact Me</h1>
 			  <div class = 'txtb'>
@@ -129,7 +129,7 @@
 				  <textarea type="text" id="message" name="message" placeholder="Enter Your Message.." required></textarea>
 			  </div>
 			  <div>
-				  <a class='btn' type="submit" value="Submit">Send</a>
+				  <button class='btn' type="submit" value="Submit">Send</button>
 			  </div>
 		  </form>
 		</div>
