aligne adjust finish

--- a/contact.html
+++ b/contact.html
@@ -111,19 +111,19 @@
 		<div class="contact-foam" align = 'center', style="margin-top:150px">
 		  <form action="https://getform.io/f/8bb701eb-0fde-4d24-a1b9-1e5e9e29f127" method="POST">
 			  <h1 class = 'my-4'>Contact Me</h1>
-			  <div class = 'txtb' style="margin-bottom:30px">
+			  <div class = 'txtb' style="margin-bottom:30px;text-align-last:center">
 				  <label for="fname">Frist Name :</label>
 				  <input type="text" id="fname" name="firstname" placeholder="Enter Your First Name.." required></input>
 			  </div>
-			  <div class = 'txtb' style="margin-bottom:30px">
+			  <div class = 'txtb' style="margin-bottom:30px;text-align-last:center">
 				  <label for="fname">Last Name :</label>
 				  <input type="text" id="lname" name="lastname" placeholder="Enter Your Last Name.." required></input>
 			  </div>
-			  <div class = 'txtb' style="margin-bottom:30px">
+			  <div class = 'txtb' style="margin-bottom:30px;text-align-last:center">
 				  <label for="email">Email :</label>
 				  <input type="text" id="email" name="email" placeholder="Enter Your Email.." required></input>
 			  </div>
-			  <div class = 'txtb' style="margin-bottom:30px">
+			  <div class = 'txtb' style="margin-bottom:30px;text-align-last:center">
 				  <label for="message">Message :</label>
 				  <textarea type="text" id="message" name="message" placeholder="Enter Your Message.." required></textarea>
 			  </div>
