--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 					I love to play around with data and solve problems with machine learning.
 					</p>
 				<p class="lead text-center" style="font-size:25px">
-					Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
+					Besides studying, I'm a travel lover🌎, a bookworm📚 and a healthy living advocate💪.
 					</p>
 				<!-- <p class="lead text-center" style="font-size:25px">
 						I love traveling🌎, books📚, music🎧, art gallery🎨, and regular gym workout💪
