--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+53---
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -65,19 +65,19 @@
 			<div align="center">
 				<!-- https://fontawesome.com/icons?d=gallery&m=free -->
 				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
-					<i class="fab fa-google", style = "font-size:53px"></i>
+					<i class="fab fa-google", style = "font-size:53px;"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
 					<i class="fab fa-twitter", style = "font-size:53px"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://github.com/jjone36">
-					<i class="fab fa-github", style = "font-size:53px"></i>
+					<i class="fab fa-github", style = "font-size:53px;"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
 					<i class="fab fa-instagram", style = "font-size:53px"></i>
 	 			</a>
 				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
-					<i class="fab fa-linkedin", style = "font-size:53px"></i>
+					<i class="fab fa-linkedin", style = "font-size:53px;"></i>
 				</a>
 
 				<br>
@@ -124,8 +124,8 @@
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
 									<li>Paper Reviews</li>
+									<li>PyTorch, Keras, TF</li>
 									<li>Computer Vision</li>
-									<li>Tensorflow</li>
 									<li>Date : Jul 2019</li>
 							</ul>
 							<div class="link_button">
@@ -156,6 +156,7 @@
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
 									<li>Blog Post</li>
+									<li>KDnuggets, Medium</li>
 									<li>Date : Jun 2019</li>
 							</ul>
 							<div class="link_button">
