--- a/resume.html
+++ b/resume.html
@@ -64,20 +64,20 @@
 			<h1 class="my-4">Jiwon Jeong
 			</h1>
 			<div align="center">
-				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
-					<i class="fab fa-google", style = "font-size:53px"></i>
-				</a>
-				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
-					<i class="fab fa-twitter", style = "font-size:53px"></i>
-				</a>
-				<a class='icon' target="_blank" href="https://github.com/jjone36">
-					<i class="fab fa-github", style = "font-size:53px"></i>
-				</a>
-				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
-					<i class="fab fa-instagram", style = "font-size:53px"></i>
-				</a>
 				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
-					<i class="fab fa-linkedin", style = "font-size:53px"></i>
+					<i class="fab fa-linkedin", style = "font-size:40px;"></i>
+				</a>
+				<!-- <a class='icon' target="_blank" href="https://twitter.com/jjone_36">
+					<i class="fab fa-twitter", style = "font-size:53px"></i>
+				</a> -->
+				<a class='icon' target="_blank" href="https://github.com/jjone36">
+					<i class="fab fa-github", style = "font-size:40px;padding-left:40px;padding-right:40px"></i>
+				</a>
+				<!-- <a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
+					<i class="fab fa-instagram", style = "font-size:53px"></i>
+	 			</a> -->
+				<a class='icon' target="_blank" href="https://medium.com/@jiwon.jeong">
+					<i class="fab fa-medium", style = "font-size:40px;"></i>
 				</a>
 
 				<br>
