--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,8 @@
 				  			<a class="nav-link" href="/">Portfolio</a>
 						<li class="nav-item active">
 				  			<a class="nav-link" href="/contact">About Me</a>
-						<li class="nav-item">
-							<a class="nav-link" href="/resume">Résumé</a>
-							<!-- <a class="nav-link" href="https://docs.google.com/document/d/1AIg9H5UnEmksbKUfNINtiDtYF1uPelRVu4ir07Gg244/edit?usp=sharing">Résumé</a> -->
+						<!-- <li class="nav-item">
+							<a class="nav-link" href="/resume">Résumé</a> -->
 						</li>
 			  		</ul>
 				</div>
